# vergoedingen_scraper

./: .gitignore  README.md  environment.yml  pyproject.toml
Notebooks/: 1_scrape_nvvp_vergoedingen_2023.ipynb  3_scrape_nvvp_vergoedingen_2025.ipynb
Notebooks/.ipynb_checkpoints/: 2_scrape_nvvp_vergoedingen_2024-checkpoint.ipynb
Notebooks/2023/: nvvp_tarieven_scrape.json  tarieven_2023_tablepress.json  vergoedingen_2023_tablepress_2col.json  vergoedingen_2023_tablepress_3col.json  vergoedingen_verzekeraars.html
Notebooks/2024/: nvvp_tarieven_scrape.json  vergoedingen_2023_tablepress_3col.json
Notebooks/2025/: nvvp_tarieven_scrape.json
